--- a/Projects/ml_churn_mlflow/src/development/Inference_containers/Dockerfile
+++ b/Projects/ml_churn_mlflow/src/development/Inference_containers/Dockerfile
@@ -1,5 +1,5 @@
 # For more information, please refer to https://aka.ms/vscode-docker-python
-FROM python:3.8-slim
+FROM python:3.9-slim
 
 # Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -13,7 +13,8 @@ WORKDIR /app
 COPY . /app
 
 # Install pip requirements
-RUN python -m pip install --no-cache-dir --upgrade -r ./app/requirements.txt
+
+RUN python -m pip install --no-cache-dir --upgrade -r requirements.txt
 
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
