--- a/Projects/ml_churn_mlflow/src/development/Inference_containers/Dockerfile
+++ b/Projects/ml_churn_mlflow/src/development/Inference_containers/Dockerfile
@@ -14,7 +14,7 @@ COPY . /app
 
 # Install pip requirements
 
-RUN python -m pip install --no-cache-dir --upgrade -r requirements.txt
+RUN python -m pip install -r requirements.txt
 
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
