--- a/Projects/ml_churn_mlflow/src/development/Inference_containers/Dockerfile
+++ b/Projects/ml_churn_mlflow/src/development/Inference_containers/Dockerfile
@@ -11,7 +11,7 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 COPY . /app
-COPY ../../data/ /app
+COPY Projects/ml_churn_mlflow/src/data /app
 # Install pip requirements
 
 RUN python -m pip install -r requirements.txt
